# AllegroProject

./: .gitignore  AlegroAppp.cpp  AlegroAppp.h  AllegroBase.cpp  AllegroBase.hpp  CMakeLists.txt  Circle.cpp  Circle.h  ControlablleSquare.cpp  ControlablleSquare.h  README.md  Rect.cpp  Rect.h  ScreenSaver.cpp  ScreenSaver.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Square.cpp  TODO  Vector.cpp  Vector.h  Velosity.h  config.h  main.cpp
Allegro/: AlegroAppp.cpp  AlegroAppp.h  AllegroBase.cpp  AllegroBase.hpp  ScreenSaver.cpp  ScreenSaver.h
Factories/: ShapeFactory.cpp  ShapeFactory.h
Helpers/: Velosity.cpp  rand.cpp  rand.h
Shapes/: Circle.cpp  Circle.h  ControlablleSquare.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h  Square.cpp  Square.h
